# RL_NSE

./: .gitignore  CMakeLists.txt  Grid.cpp  Grid.h  README.md  boundary_conditions.cpp  boundary_conditions.h  config.cfg  ghia_comparison.py  initialization.cpp  initialization.h  input_output.cpp  input_output.h  load_cfg.py  main.cpp  memory_management.cpp  memory_management.h  png_to_csv.py  pressure_calculation.cpp  pressure_calculation.h  run  streamanimation.py  streamplot.py  time_stepping.cpp  time_stepping.h
Testaufgaben/: CMakeLists.txt
result_folder_rudi/: ReadMe.txt
result_folder_rudi/2022_08_07_16-42_lid_driven_cavity_Re100[100x100]_gravity/: config.cfg
result_folder_rudi/2022_08_07_17-37_lid_driven_cavity_Re100_gravity/: config.cfg
results/inflow_airfoil_Re1000/: config.cfg
results/inflow_sphere_Re10/: config.cfg
results/inflow_sphere_Re1000/: config.cfg
results/lid_driven_cavity_129_Re10/: config.cfg
results/lid_driven_cavity_129_Re100/: config.cfg
results/lid_driven_cavity_129_Re1000/: config.cfg
results/lid_driven_cavity_129_Re10000/: config.cfg
results/lid_driven_cavity_129_Re3200/: config.cfg
results/lid_driven_cavity_129_Re400/: config.cfg
results/lid_driven_cavity_129_Re5000/: config.cfg
shapes/: 1.csv  1.xcf  2.csv  3.csv  3.xcf  4.csv  4.xcf  6.csv
testing_derivatives/: CMakeLists.txt  Grid.cpp  Grid.h  READ_ME.txt  config.cfg  derivatives.cpp  derivatives.h  initialization.cpp  initialization.h  input_output.cpp  input_output.h  main.cpp  plotting.py  run  testing_derivatives
(+12366 files in other folders)
